# windows-app-monitor

./: .gitignore  README.md  config.py  config.yaml  entrypoint.py  env.example  event_monitor.py  imghdr.py  main.py  pyproject.toml  requirements.txt  run_as_admin.bat  simplest_telegram_bot.py  start.bat  telegram_bot.py
agent/: __init__.py  agent.py  logger.py
agent/monitors/: __init__.py  base_monitor.py  process_monitor.py  user_logon_monitor.py
tg_bot/: __init__.py  bot.py
